Exercicios HTML + CCS Parte 1

--- a/quinzena3/sistema-loja/pag-de-vendas.html
+++ b/quinzena3/sistema-loja/pag-de-vendas.html
@@ -23,48 +23,43 @@
         <a href="pg-historico-de-vendas.html">Histórico de Vendas |</a>
     </div>
 
-<center>
+    <h2 class="h2-azul">Página de Vendas</h2>
+
+<form action="">
+        <div>
+            <label for="produto-comprado">Nome do produto: </label>
+            <input type="texto" id="produto-comprado" name="produto-comprado">
+        </div>
+        <ol>
+            <li>Camiseta</li>
+            <li>Calça</li>
+            <li>Casaco</li>
+            <li>Short</li>
+            <li>Meia</li>
 
 
 
-    <h2 class="h2-azul">Funcionários</h2>
-    <!-- Crie uma lista de funcionários usando as tags que você aprendeu hoje abaixo \/ -->
-    <table border="2px">
-    <tr>
-        <th>
-    Funcionários
-        </th>
-    </tr>
+        </ol>
 
-    <tr>
-        <td>Tony Klebson</td>
-    </tr>
+<h3>Forma de Pagamento</h3>
 
-    <tr>
-        <td>Anderson Carneiro</td>
-    </tr>
-    <tr>
-        <td>Gleison Ronaldo</td>
-    </tr>
-    </table>
-</center>
+<li>Dinheiro</li>
+<li>Cartão</li>
+
+</ul>
+
 </body>
 
 
 
 
 
-<br>
-<br>
-<br>
-
 <center>
 
 
-<footer class="rodape">
+    <footer class="rodape">
+        
+        @LojaInterativa - Todos os Direitos Reservados
+    </footer>
     
-    @LojaInterativa - Todos os Direitos Reservados
-</footer>
-
-</center>
-</html>
+    </center>
