--- a/quinzena3/sistema-loja/ctrl-estoque.html
+++ b/quinzena3/sistema-loja/ctrl-estoque.html
@@ -4,21 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Controle de Estoque</title>
+    <title class="titulo">Controle de Estoque</title>
+    
+    <link href="index.css" rel="stylesheet">
+
 </head>
 <body>
     <div>
-        <p>Nome da lojinha</p>
+        <p class="cabecalho"">Loja Interativa</p>
     </div>
     
-    <div>
-        <a href="index.html">Página Inicial</a>
-        <a href="ctrl-estoque.html">Controle de Estoque</a>
-        <a href="add-produto.html">Adicionar Produto</a>
-        <a href="funcionarios.html">Funcionários</a>
+    <div class="personalizado">
+        <a href="index.html">| Página Inicial |</a>
+        <a href="ctrl-estoque.html">Controle de Estoque |</a>
+        <a href="add-produto.html">Adicionar Produto |</a>
+        <a href="funcionarios.html">Funcionários |</a>
+        <a href="pag-de-vendas.html">Página de Vendas |</a>
+        <a href="pg-historico-de-vendas.html">Histórico de Vendas |</a>
     </div>
 
-    <h2>Controle de Estoque</h2>
+
+    <center>
+    <h2 class="h2-azul">Controle de Estoque</h2>
 
     <table>
         <tr>
@@ -67,5 +74,15 @@
 
     </table>
 
+</center>
 </body>
+
+
+<br>
+<br>
+<center>
+<footer class="rodape">
+    @LojaInterativa - Todos os Direitos Reservados
+</footer>
+</center>
 </html>
