--- a/quinzena3/sistema-loja/index.html
+++ b/quinzena3/sistema-loja/index.html
@@ -4,33 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Nome da Loja</title>
+    <title class="titulo">Loja Interativa</title>
+
+    <link href="index.css" rel="stylesheet">
+
 </head>
 <body>
-    <div>
-        <h1>Bem-vind@ ao <em>nome da loja</em>!</h1>
-        <p>Frase de chamada para sua loja</p>
+    <div class="cabecalho">
+        <h1>Bem-vind@ ao <em>Loja Interativa</em>!</h1>
+        <p>Faça suas compras de forma rápida e Interativa</p>
     </div>
 
-    <div>
-        <a href="index.html">Página Inicial</a>
-        <a href="ctrl-estoque.html">Controle de Estoque</a>
-        <a href="add-produto.html">Adicionar Produto</a>
-        <a href="funcionarios.html">Funcionários</a>
+    <div class="personalizado">
+        <a href="index.html">| Página Inicial |</a>
+        <a href="ctrl-estoque.html">Controle de Estoque |</a>
+        <a href="add-produto.html">Adicionar Produto |</a>
+        <a href="funcionarios.html">Funcionários |</a>
+        <a href="pag-de-vendas.html">Página de Vendas |</a>
+        <a href="pg-historico-de-vendas.html">Histórico de Vendas |</a>
     </div>
-
+<br>
+    <center>
     <div>
         <!-- ADICIONAR INFORMAÇOES SOBRE SUA LOJINHA -->
+        A Loja interativa é uma loja 100% Nacional e especializadas em entregas imediatas de roupas casuais.<br>
+
+
+        Tenha sempre a disposição uma loja para chamar de sua. <br>
+
+        Faça suas compras de forma rápida e Interativa<br>
+
     </div>
+    <br>
+    <center>/
+
+        <img src="img/interatividade.jpg"/>
+
+    <center>
+
 
     <div>
         <p>Siga-nos nas redes sociais!</p>
 
-        <div>
-            <img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
+        <div class="rede">
+            <a href="www.facebook.com"><img src="https://image.flaticon.com/icons/png/512/25/25305.png" width="45" height="45"/></a>
+            <a href="www.instagram.com"><img src="https://image.flaticon.com/icons/png/512/25/25425.png" width="45" height="45"/></a>
+            <a href="www.Twitter.com"><img src="https://image.flaticon.com/icons/png/512/8/8800.png" width="45" height="45"/></a>
+        
         </div>
+
     </div>
+    </center>
 </body>
+
+    <center>
+<footer class="rodape">
+    @LojaInterativa - Todos os Direitos Reservados
+</footer>
+    </center>
 </html>
